# zzy_xps_llm_workflow

./: .gitignore  LICENSE  README.md  check_pdf.py  environment.yml  pyproject.toml
Tools/: _manifest.json  _workflow.json  create_groups.py  real_xps_workflow.py  tool_create_groups.py  tool_full_analysis.py  tool_real_workflow.py  tool_runner.py  tool_utils.py  tool_workflow_runner.py  tool_xps_correlator.py  tool_xps_fitter.py  tool_xps_plotter.py  tool_xps_quantifier.py  tool_xps_reader.py  utils.py  workflow_orchestrator.py  xps_workflow_manager.py  xps_workflow_runner.py
Tools/APS_XAS/: CONDITIONS_OVERLAY_GUIDE.md  EXPERIMENT_PLANNING_GUIDE.md  EXPERIMENT_PLANNING_QUICKSTART.md  EXPERIMENT_PLANNING_SUMMARY.md  ML_IMPLEMENTATION_SUMMARY.md  ML_MAIN_ENTRY_GUIDE.md  MODULAR_DESIGN_UPDATE.md  WHOLE_SPECTRUM_PCA_GUIDE.md  WHOLE_SPECTRUM_PCA_QUICKSTART.md  XAS Automated Pipeline.md  __init__.py  convert_excel_to_dat.py  demo_whole_spectrum_pca.py  ml_test_results.txt  test_conditions_overlay_only.py  test_experiment_planning.py  test_ml_analysis.py  test_ml_output.txt  test_ml_phase1.py  test_output_full.txt  test_prj_ml_workflow.py  test_quick_integration.py  test_spectrum_pca_planning.py  workflow_output.txt  (+4 more)
benchmarks/: model_sensitivity_benchmark.py
experiments/: __init__.py  utils.py
llm_manager/: Agentstate.py  enhanced_triage_fixed.py  experiment_router.py  experiment_router_alerts afterjob.py  ollama_utils.py  quality_gatekeeper.py  system_prompt.md  triage_router.py  xps_workflow_graph.py
ui/: chat_window.py  promptsIneed.md  readme (1).md  workers.py
(+163 files in other folders)
