[project]
name = "zzy-llm"
version = "0.1.0"
description = "XPS Workflow Assistant — LLM-driven data analysis for X-ray photoelectron spectroscopy"
authors = [
    {name = "Zhenzhen Yang", email = "yangzhzh2012@gmail.com"}
]
license = {text = "Custom Research License — see LICENSE"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pyside6 (>=6.10.0,<7.0.0)",
    "pyside6-addons (>=6.10.0,<7.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "lmfit (>=1.3.4,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.3.2,<2.0.0)",
    "scikit-image (>=0.20.0,<0.25.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "sip (>=6.14.0,<7.0.0)",
    "pymcr (>=0.5.1,<0.6.0)",
    "shiboken6 (>=6.10.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)"
]

[tool.poetry.scripts]
zzy-ui = "zzy_llm.ui.chat_window:main"

